Undo theme files changes and dark mode fix

--- a/sourcecode/hub/resources/css/app.scss
+++ b/sourcecode/hub/resources/css/app.scss
@@ -60,5 +60,8 @@ $font-family-sans-serif: Lato, sans-serif;
 @import 'choices.js/src/styles/choices';
 @import 'billboard.js/dist/billboard';
 @import 'layout';
-@import 'theme-edlib';
-@import 'theme-dark';
+@import 'theme';
+
+[data-bs-theme="dark"] {
+    @import 'billboard.js/dist/theme/dark';
+}
